fixed syntax error on js

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -123,7 +123,7 @@
                     reset();
 
                     // Check if there are any previous uploads to continue.
-                    upload.findPreviousUploads().then(function (previousUploads) {:
+                    upload.findPreviousUploads().then(function (previousUploads) {
                         // Found previous uploads so we select the first one.
                         if (previousUploads.length) {
                             upload.resumeFromPreviousUpload(previousUploads[0])
